--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e ts,mustache,json src/index.ts",
-    "start-dev": "nodemon --watch 'src/*' --ext 'ts,json' --ignore 'src//.spec.ts' --exec 'ts-node src/index.ts'"
+    "start": "node src/index.ts",
+    "dev": "nodemon -e ts,mustache,json src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
