--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon -e ts,mustache,json src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
